test/memory/shannon/outofmemory/mallocOutOfMemory.good
mallocOutOfMemory.chpl:5: error: Out of memory allocating "unknown"
